# PromptsLib

./: .gitignore  README.md  package-lock.json  package.json  promptlab-demo.sqlite  promptlab-demo2.sqlite  promptlab-demo3.sqlite
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  index.css
crates/core/: Cargo.toml
crates/core/src/: lib.rs  storage.rs
scripts/: promptlab_demo_cli.py  qwen_prompt_analyzer.py
